# luastatus

./: .gitignore  .luacheckrc  .travis.yml  CMakeLists.txt  DEPENDS  DEPENDS.txt  README.md  RELEASE_NOTES  WRITING_BARLIB_OR_PLUGIN.md  check_final_newline.py  check_includes.sh  check_style.sh  generate-man.sh  probes.h  release.sh  run_literally_all_tests.sh  run_luacheck.sh
barlibs/dwm/: CMakeLists.txt  README.md  README.rst  dwm.c
barlibs/i3/: CMakeLists.txt  README.md  README.rst  escape_json_str.c  escape_json_str.h  event_watcher.c  event_watcher.h  generator_utils.c  generator_utils.h  i3.c  luastatus-i3-wrapper  pango_escape.c  pango_escape.h  priv.h
barlibs/i3/fuzz_esc_json/: build.sh  harness.c
barlibs/i3/fuzz_esc_pango/: build.sh  gen_testcases.sh  harness.c
barlibs/lemonbar/: .gitignore  CMakeLists.txt  README.md  README.rst  lemonbar.c  luastatus-lemonbar-launcher  luastatus-lemonbar-launcher.c  luastatus-lemonbar-wrapper  markup_utils.c  markup_utils.h
barlibs/lemonbar/fuzz_esc/: gen_testcases.sh  harness.c
barlibs/lemonbar/fuzz_sanitize/: build.sh  fuzz.sh  gen_testcases.sh  harness.c
barlibs/stdout/: CMakeLists.txt  README.md  README.rst  luastatus-dvtm  luastatus-stdout-wrapper  open_stdio_file.c  open_stdio_file.h  sanitize.c  sanitize.h  stdout.c
barlibs/stdout/fuzz/: build.sh  gen_testcases.sh  (+1 more)
barlibs/wmii/: CMakeLists.txt  README.md  luastatus-wmii-wrapper  wmii.c
liblrand/: CMakeLists.txt  README.txt  liblrand.c  liblrand.h
libls/: CMakeLists.txt  algo.h  alloc_utils.c  alloc_utils.h  compdep.h  cstring_utils.c  cstring_utils.h  errno_utils.h  evloop_lfuncs.h  evloop_utils.c  evloop_utils.h  fifo_device.h  freemem.h  getenv_r.c  getenv_r.h  io_utils.c  io_utils.h  ls_algo.h  ls_alloc_utils.c  ls_alloc_utils.h  ls_assert.c  ls_assert.h  ls_compdep.h  ls_cstring_utils.c  ls_cstring_utils.h  ls_evloop_lfuncs.h  ls_fifo_device.h  ls_freemem.h  ls_getenv_r.c  ls_getenv_r.h  ls_io_utils.c  ls_io_utils.h  ls_lua_compat.h  ls_osdep.c  ls_osdep.h  ls_panic.c  ls_panic.h  ls_parse_int.c  ls_parse_int.h  ls_probes.in.h  (+39 more)
libmoonvisit/: CMakeLists.txt  README.txt  moonvisit.c  moonvisit.h
libprocalive/: CMakeLists.txt  procalive_lfuncs.c  procalive_lfuncs.h
libwidechar/: CMakeLists.txt  README.txt  config.in.h  libwidechar.c  libwidechar.h  libwidechar_compdep.h  libwidechar_xspan.h
luastatus/: .gitignore  CMakeLists.txt  README.rst  barlib.c  barlib.h  check_lua_call.c  check_lua_call.h  comm.c  comm.h  config.h.in  config.in.h  libwidechar.c  libwidechar.h  load_by_name.c  load_by_name.h  log.c  log.h  lua_libs.c  lua_libs.h  luastatus.1  luastatus.c  plugin.c  plugin.h  pth_check.c  pth_check.h  runshell.c  runshell.h  sane_dlerror.h  sepstate.c  sepstate.h  taints.c  taints.h  version.sh  version_h_generate.sh  widget.c  widget.h
plugins/alsa/: CMakeLists.txt  README.md  README.rst  alsa.c
plugins/dbus/: .gitignore  CMakeLists.txt  README.md  README.rst  README_FN_CALL_METHOD.rst  README_FN_MKVAL.rst  README_FN_PROP.rst  bustype2idx.h  cstringify.sh  cvt.c  cvt.h  dbus.c  load_lualib.c  load_lualib.h  lualib.lua  marshal.c  marshal.h  prop.c  prop.h  prop_ctx.c  prop_ctx.h  prop_ctx_parse.c  prop_ctx_parse.h  prop_field.c  prop_field.h
plugins/llamacxx/: CMakeLists.txt  DEV_NOTES.md  FUZZING.md  README.rst  conc_queue.h  config.in.h  conq.c  conq.h  describe_lua_err.c  describe_lua_err.h  dss_list.c  dss_list.h  escape_json_str.c  escape_json_str.h  escape_lfuncs.c  escape_lfuncs.h  escape_q.c  escape_q.h  escape_quoted.c  escape_quoted.h  external_context.h  get_min_curl_ver.sh  llamacxx.c  map_ref.h  mini_luastatus.c  mini_luastatus.h  my_error.h  parse_opts.c  parse_opts.h  priv.h  pushed_str.c  pushed_str.h  report.c  report.h  requester.c  requester.h
plugins/multiplex/: CMakeLists.txt  README.rst  config.in.h  conq.c  conq.h  external_context.h  map_ref.c  map_ref.h  multiplex.c  priv.h  runner.c  runner.h  runtime_data.c  runtime_data.h  wspec_list.c  wspec_list.h
plugins/network-linux/: CMakeLists.txt  DEV_NOTES.txt  README.rst  ethernet_info.c  ethernet_info.h  iface_type.c  iface_type.h  network.c  string_set.c  string_set.h  strset.c  strset.h  strset_binsearch.c  strset_binsearch.h  strset_mergesort.c  strset_mergesort.h  wireless_info.c  wireless_info.h
plugins/pipev2/: CMakeLists.txt  README.rst  launch.c  launch.h  pipev2.c  sigdb.c  sigdb.h  utils.c  utils.h
plugins/pulse/: CMakeLists.txt  README.md  README.rst  pulse.c
plugins/udev/: CMakeLists.txt  README.md  README.rst  udev.c
plugins/web/: CMakeLists.txt  README.rst  compat_lua_resume.c  compat_lua_resume.h  get_min_curl_ver.sh  json_config.in.h  make_request.c  make_request.h  next_request_params.h  opts.c  opts.h  parse_opts.c  parse_opts.h  set_error.c  set_error.h  web.c
plugins/wireless/: CMakeLists.txt  README.rst  detect_iface.c  detect_iface.h  wireless.c  wireless_info.c
plugins/xkb/: CMakeLists.txt  README.md  README.rst  groups_buffer.c  groups_buffer.h  parse_groups.c  parse_groups.h  parse_symbols.c  parse_symbols.h  rules_names.c  rules_names.h  somehow.c  somehow.h  wrongly.c  wrongly.h  xkb.c
plugins/xtitle/: CMakeLists.txt  README.md  README.rst  xtitle.c
tests/: .gitignore  CMakeLists.txt  README.txt  bt.sh  dlopen.supp  glib.supp  kcov_wrapper.c  listnets.c  minstd.h  minstd_prng.h  misc.sh  mock_barlib.c  mock_plugin.c  parrot.c  pt.sh  pt_battery_linux.lib.bash  pt_cpu_usage_linux.lib.bash  pt_dbus_daemon.lib.bash  pt_file_contents_linux.lib.bash  pt_fs.lib.bash  pt_mem_usage_linux.lib.bash  pt_pipe.lib.bash  pt_pulseaudio_daemon.lib.bash  pt_simul.lib.bash  pt_stopwatch.lib.bash  pt_timer.lib.bash  pt_unixsock.lib.bash  pulsetalker.sh  stopwatch.c  stopwatch.lib.bash  torture.sh  utils.lib.bash
tests/barlib-runners/: runner-redirect-34
tests/httpserv/: .gitignore  CMakeLists.txt  argparser.c  argparser.h  buffer.c  buffer.h  common.c  common.h  fatal_error.h  httpserv.c  main.c  panic.h  server.c  server.h  sleep_millis.c  sleep_millis.h  workmode.c  workmode.h
tests/optional/: dbus_srv.py
tests/pt_tests/: add_test.sh
(+734 files in other folders)
